# dbt-dimensional-modelling

adventureworks/models/marts/: rory.sql  test_address_count.sql
dbt_duckdb_env/: pyproject.toml
docs/: part01-setup-dbt-project.md
