[tool.poetry]
name = "dbt-duckdb-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^15.0.0"
duckdb = "^0.9.2"
ipykernel = "^6.29.0"
pandas = "^2.2.0"
dbt = "^1.0.0.35.7"
dbt-duckdb = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
